# vectors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  renovate.json
.github/workflows/: rust.yml
benches/: dense.rs  mixed.rs  sparse.rs
src/: common.rs  dense.rs  iter.rs  lib.rs  sparse.rs  storage.rs
src/dense/: debug.rs  distance.rs  dot.rs  heap.rs  iter.rs  mod.rs  ops.rs  stack.rs  storage.rs
src/dense/heap/: add.rs  debug.rs  distance.rs  div.rs  dot.rs  iter.rs  mod.rs  mul.rs  mul_add.rs  sub.rs
src/dense/stack/: add.rs  debug.rs  distance.rs  div.rs  dot.rs  iter.rs  mod.rs  mul.rs  mul_add.rs  sub.rs
src/sparse/: common.rs  debug.rs  distance.rs  dot.rs  heap.rs  iter.rs  join.rs  mod.rs  ops.rs  stack.rs  storage.rs  util.rs
src/sparse/heap/: add.rs  debug.rs  distance.rs  div.rs  dot.rs  iter.rs  mod.rs  mul.rs  mul_add.rs  sub.rs
src/sparse/stack/: add.rs  debug.rs  distance.rs  div.rs  dot.rs  iter.rs  mod.rs  mul.rs  mul_add.rs  sub.rs
tests/: parity.rs  readme.rs
