[package]
name = "vectors"
description = "Sparse & dense vectors for use in high dimensional vector spaces"
categories = ["science"]
repository = "https://github.com/Regexident/vectors"
keywords = [
    "vectors",
    "dense",
    "sparse",
    "machine-learning",
    "vector-space",
    "linear-algebra",
]
license = "MPL-2.0"
readme = "README.md"
edition = "2024"
version = "0.3.0"

[dependencies]
arrayvec = "^0.7"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"

[[bench]]
name = "sparse"
harness = false

[[bench]]
name = "dense"
harness = false

[[bench]]
name = "mixed"
harness = false

[features]
default = ["std"]
std = ["num-traits/std", "alloc"]
alloc = []
libm = ["num-traits/libm"]
