[package]
name = "vectors"
description = "Sparse & dense vectors for use in high dimensional vector spaces"
categories = ["science"]
repository = "https://github.com/Regexident/vectors"
keywords = [
    "sparse-vector",
    "no-std",
    "vector-algebra",
    "vector-space",
    "machine-learning",
]
license = "MPL-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85.1"
version = "0.3.0"

[dependencies]
arrayvec = { version = "^0.7", default-features = false }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rand = "0.8"

[[bench]]
name = "sparse"
harness = false

[[bench]]
name = "dense"
harness = false

[[bench]]
name = "mixed"
harness = false

[features]
default = ["std"]
std = ["alloc", "arrayvec/std", "num-traits/std"]
alloc = []
libm = ["num-traits/libm"]
